feat: Integrate weather forecasts into the scheduler (#38)
This commit introduces weather-based scheduling capabilities to the application. The scheduler can now factor in weather forecasts when making decisions about when to charge or discharge the Powerwall.

Key changes:
- Added a new service to fetch weather forecasts from an external provider.
- Integrated the weather service with the scheduling logic to allow for weather-aware scheduling decisions.
- Added new configuration options for the weather service.
- Included new test data and unit tests for the weather service.

Co-authored-by: Rohit Khatkar <khatkarrohit@gmail.com>